--- a/model/profile/_meta/fields.yml
+++ b/model/profile/_meta/fields.yml
@@ -2,6 +2,22 @@
   title: APM Profile
   description: Profiling-specific data for APM.
   fields:
+
+    - name: _routing
+      type: keyword
+      count: 1
+      description: Routing for doc based on Atomic Site ID
+      overwrite: true
+
+    - name: atomic
+      type: group
+      fields:
+        - name: site_id
+          type: long
+          count: 1
+          description: Atomic Site ID for this doc
+          overwrite: true
+
     - name: processor.name
       type: keyword
       description: Processor name.
