Add Atomic Site ID based on `x-atomic-site` Header (#1)
* Add `_routing` and `atomic.site_id` fields

* Add new Atomic Site ID and routing fields

* Remove `_routing` from fields

* Add tests and make sure  is string

* Fix site id extraction and add tests

* Support custom header from both HTTP and gRPC

* Add tests for indexer

* Disable GH Actions on Pull

* Add new fields

* Parse siteid from header for decoder

* Ignore optional Atomic param in RUM

* Error message in latest go changed

* Revert "Disable GH Actions on Pull"

This reverts commit 6c04e2ff2fc792086bf421eca8e14676e29bdae8.

* Support new and old versions of go error messages

* Fix error handling logic

* Move `_routing` to bulk API item metadata

* Backout ES Routing Changes

--- a/model/profile/_meta/fields.yml
+++ b/model/profile/_meta/fields.yml
@@ -2,6 +2,16 @@
   title: APM Profile
   description: Profiling-specific data for APM.
   fields:
+
+    - name: atomic
+      type: group
+      fields:
+        - name: site_id
+          type: long
+          count: 1
+          description: Atomic Site ID for this doc
+          overwrite: true
+
     - name: processor.name
       type: keyword
       description: Processor name.
