--- a/model/transaction/_meta/fields.yml
+++ b/model/transaction/_meta/fields.yml
@@ -2,6 +2,16 @@
   title: APM Transaction
   description: Transaction-specific data for APM
   fields:
+
+    - name: atomic
+      type: group
+      fields:
+        - name: site_id
+          type: long
+          count: 1
+          description: Atomic Site ID for this doc
+          overwrite: true
+
     - name: processor.name
       type: keyword
       description: Processor name.
